--- a/impressum.html
+++ b/impressum.html
@@ -4,119 +4,101 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Glowby - Impressum</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=DM+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body {
-            font-family: 'DM Sans', -apple-system, BlinkMacSystemFont, sans-serif;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, sans-serif;
             line-height: 1.7;
-            color: #e2e8f0;
-            background: #080812;
-            background-image: radial-gradient(ellipse 100% 70% at 50% 0%, rgba(139, 92, 246, 0.15) 0%, transparent 50%);
-            min-height: 100vh;
+            color: #1a1a2e;
+            background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%);
             padding: 20px;
         }
         .container {
             max-width: 700px;
             margin: 0 auto;
-            background: linear-gradient(160deg, rgba(20, 15, 35, 0.95) 0%, rgba(10, 8, 20, 0.98) 100%);
+            background: white;
             padding: 40px;
-            border-radius: 24px;
-            border: 1px solid rgba(139, 92, 246, 0.2);
-            box-shadow: 0 0 60px rgba(139, 92, 246, 0.1), 0 20px 40px rgba(0, 0, 0, 0.4);
-        }
-        .logo { text-align: center; margin-bottom: 30px; }
-        .logo-text {
-            font-family: 'Archivo Black', sans-serif;
-            font-size: 2rem;
-            background: linear-gradient(135deg, #a855f7 0%, #8b5cf6 50%, #6366f1 100%);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
+            border-radius: 16px;
+            box-shadow: 0 4px 20px rgba(0,0,0,0.1);
         }
         h1 {
-            font-family: 'Archivo Black', sans-serif;
-            color: #fff;
+            color: #8b5cf6;
             margin-bottom: 30px;
-            font-size: 1.8rem;
-            text-align: center;
+            font-size: 2rem;
         }
         h2 {
-            color: #a855f7;
-            margin-top: 30px;
-            margin-bottom: 15px;
+            color: #1a1a2e;
+            margin-top: 25px;
+            margin-bottom: 10px;
             font-size: 1.1rem;
-            font-weight: 600;
         }
-        p { margin-bottom: 12px; color: #94a3b8; }
-        a { color: #a855f7; text-decoration: none; }
-        a:hover { text-decoration: underline; }
-        strong { color: #e2e8f0; }
+        p { margin-bottom: 15px; color: #334155; }
+        a { color: #8b5cf6; }
         .info-box {
-            background: rgba(139, 92, 246, 0.1);
-            border: 1px solid rgba(139, 92, 246, 0.2);
-            border-radius: 12px;
+            background: #f1f5f9;
             padding: 20px;
+            border-radius: 12px;
             margin: 20px 0;
         }
-        .info-box p { margin-bottom: 8px; }
-        .info-box p:last-child { margin-bottom: 0; }
         .footer {
-            margin-top: 40px;
+            margin-top: 30px;
             padding-top: 20px;
-            border-top: 1px solid rgba(139, 92, 246, 0.2);
+            border-top: 1px solid #e2e8f0;
             text-align: center;
-            font-size: 0.85rem;
             color: #64748b;
+            font-size: 0.85rem;
         }
-        .footer a { color: #8b5cf6; }
     </style>
 </head>
 <body>
     <div class="container">
-        <div class="logo"><span class="logo-text">GLOWBY</span></div>
-        
-        <h1>Impressum</h1>
+        <h1>🧠 Impressum</h1>
+        <p><em>Angaben gemäß § 5 TMG (Telemediengesetz)</em></p>
 
-        <h2>Angaben gemäß § 5 TMG und § 18 MStV</h2>
-        
         <div class="info-box">
-            <p><strong>Verantwortlich für den Inhalt:</strong></p>
-            <p>Stanisław Pawluczuk</p>
-            <p>Jednoosobowa Działalność Gospodarcza (Einzelunternehmen nach polnischem Recht)</p>
-            <p>[YOUR_VIRTUAL_OFFICE_ADDRESS]</p>
+            <h2>Anbieter und Verantwortlicher</h2>
+            <p>
+                <strong>Stanisław Pawluczuk</strong><br>
+                Einzelunternehmen (Jednoosobowa Działalność Gospodarcza)<br>
+                ul. Świeradowska 47, 02-662 Warszawa, Polen<br>
+                Polen
+            </p>
         </div>
 
         <h2>Kontakt</h2>
-        <div class="info-box">
-            <p><strong>E-Mail:</strong> <a href="mailto:glowbygame@pm.me">glowbygame@pm.me</a></p>
-        </div>
+        <p>
+            E-Mail: <a href="/cdn-cgi/l/email-protection#1f787370687d66787e727a5f6f7231727a"><span class="__cf_email__" data-cfemail="294e45465e4b504e48444c69594407444c">[email&#160;protected]</span></a>
+        </p>
 
-        <h2>Handelsregister</h2>
-        <div class="info-box">
-            <p><strong>NIP (Steuer-ID):</strong> 1231476789</p>
-            <p><strong>REGON (Statistiknummer):</strong> 387249521</p>
-            <p><strong>Registriert in:</strong> Polen (Republik Polen)</p>
-        </div>
+        <h2>Umsatzsteuer-Identifikationsnummer</h2>
+        <p>
+            NIP (Polnische Steuernummer): 1231476789<br>
+            REGON: 387249521
+        </p>
+
+        <h2>Verantwortlich für den Inhalt nach § 18 MStV</h2>
+        <p>
+            Stanisław Pawluczuk<br>
+            ul. Świeradowska 47, 02-662 Warszawa, Polen<br>
+            Polen
+        </p>
 
         <h2>EU-Streitschlichtung</h2>
-        <p>Die Europäische Kommission stellt eine Plattform zur Online-Streitbeilegung (OS) bereit: <a href="https://ec.europa.eu/consumers/odr/" target="_blank">https://ec.europa.eu/consumers/odr/</a></p>
+        <p>Die Europäische Kommission stellt eine Plattform zur Online-Streitbeilegung (OS) bereit:</p>
+        <p><a href="https://ec.europa.eu/consumers/odr" target="_blank">https://ec.europa.eu/consumers/odr</a></p>
         <p>Unsere E-Mail-Adresse finden Sie oben im Impressum.</p>
 
-        <h2>Verbraucherstreitbeilegung</h2>
+        <h2>Verbraucherstreitbeilegung / Universalschlichtungsstelle</h2>
         <p>Wir sind nicht bereit oder verpflichtet, an Streitbeilegungsverfahren vor einer Verbraucherschlichtungsstelle teilzunehmen.</p>
 
         <h2>Haftung für Inhalte</h2>
         <p>Als Diensteanbieter sind wir gemäß § 7 Abs.1 TMG für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Nach §§ 8 bis 10 TMG sind wir als Diensteanbieter jedoch nicht verpflichtet, übermittelte oder gespeicherte fremde Informationen zu überwachen oder nach Umständen zu forschen, die auf eine rechtswidrige Tätigkeit hinweisen.</p>
 
-        <h2>Haftung für Links</h2>
-        <p>Unser Angebot enthält Links zu externen Websites Dritter, auf deren Inhalte wir keinen Einfluss haben. Deshalb können wir für diese fremden Inhalte auch keine Gewähr übernehmen. Für die Inhalte der verlinkten Seiten ist stets der jeweilige Anbieter oder Betreiber der Seiten verantwortlich.</p>
+        <h2>Urheberrecht</h2>
+        <p>Die durch den Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten, einschließlich des Glowby-Charakters und aller Spielgrafiken, unterliegen dem polnischen und internationalen Urheberrecht. Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der Grenzen des Urheberrechtes bedürfen der schriftlichen Zustimmung des Autors.</p>
 
         <div class="footer">
-            <p><a href="index.html">Home</a> · <a href="privacy-policy.html">Datenschutz</a> · <a href="terms-of-service.html">AGB</a> · <a href="support.html">Support</a></p>
-        </div>
-    </div>
-</body>
-</html>
+            <p>© 2026 Glowby. Alle Rechte vorbehalten.</p>
+            <p style="margin-top: 10px;">
+                <a href="privacy-policy.html">Datenschutzerklärung</a> | 
+  
