--- a/index.html
+++ b/index.html
@@ -280,9 +280,13 @@
         </p>
         <p style="color: #64748b; font-size: 0.8rem; margin-top: 15px;">
             Stanisław Pawluczuk | Jednoosobowa Działalność Gospodarcza<br>
-            ul. Świeradowska 47, 02-662 Warszawa, Poland<br>
+            [YOUR_VIRTUAL_OFFICE_ADDRESS]<br>
             NIP: 1231476789 | REGON: 387249521<br>
-            Contact: <a href="/cdn-cgi/l/email-protection#a8cfc4c7dfcad1cfc9c5cde8d8c586c5cd" style="color: #8b5cf6;"><span class="__cf_email__" data-cfemail="47202b2830253e20262a2207372a692a22">[email&#160;protected]</span></a>
+            Contact: <a href="mailto:glowbygame@pm.me" style="color: #8b5cf6;">glowbygame@pm.me</a>
         </p>
         <p class="languages">
-            🌍 Available in: English • Deutsch • Français • Español • Italiano
+            🌍 Available in: English • Deutsch • Français • Español • Italiano • Português • Українська • 日本語 • 한국어 • 简体中文
+        </p>
+    </footer>
+</body>
+</html>
